--- a/.nais/dev.yaml
+++ b/.nais/dev.yaml
@@ -49,6 +49,8 @@ spec:
         - application: salesforce
           namespace: teamcrm
           cluster: dev-external
+        - application: itestapp
+          namespace: teamcrm
     outbound:
       rules:
         - application: veilarbapi
@@ -66,3 +68,17 @@ spec:
       value: '/whitelist/dev.json'
     - name: SF_TOKENHOST
       value: 'https://test.salesforce.com/services/oauth2/token'
+    - name: AUDIENCE_TOKEN_SERVICE_URL
+      value: 'https://security-token-service.nais.preprod.local/rest/v1/sts/.well-known/openid-configuration'
+    - name: AUDIENCE_TOKEN_SERVICE_ALIAS
+      value: 'https://security-token-service.nais.preprod.local'
+    - name: AUDIENCE_TOKEN_SERVICE
+      value: 'srvhenvendelsedialog,srvmodiabrukerdialog,srvModiabrukerdialog'
+    - name: AUDIENCE_ISSO_URL
+      value: 'https://isso-q.adeo.no:443/isso/oauth2/.well-known/openid-configuration'
+    - name: AUDIENCE_ISSO_ALIAS
+      value: 'https://isso-q.adeo.no:443'
+    - name: AUDIENCE_ISSO
+      value: 'modialogin-q0,modialogin-q1'
+    - name: SALESFORCE_AZURE_CLIENT_ID
+      value: 6d2d8031-f17d-4ed6-83f5-e554d5c07eca
