--- a/.nais/dev.yaml
+++ b/.nais/dev.yaml
@@ -42,6 +42,9 @@ spec:
   azure:
     application:
       enabled: true
+      claims:
+        extra:
+          - azp_name
       tenant: trygdeetaten.no
   accessPolicy:
     inbound:
