--- a/.nais/dev.yaml
+++ b/.nais/dev.yaml
@@ -42,6 +42,7 @@ spec:
   azure:
     application:
       enabled: true
+      allowAllUsers: true
       claims:
         extra:
           - azp_name
