--- a/build.gradle
+++ b/build.gradle
@@ -75,8 +75,8 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 
     implementation "org.http4k:http4k-core:$http4k_version"
-    implementation "org.http4k:http4k-server-netty:$http4k_version"
-    implementation "org.http4k:http4k-client-apache:3.244.0"
+    implementation "org.http4k:http4k-client-apache:$http4k_version"
+    implementation "org.http4k:http4k-server-ktorcio:$http4k_version"
 
     implementation "io.github.microutils:kotlin-logging:$kotlin_loggin_version"
     implementation "ch.qos.logback:logback-classic:$logback_version"
