--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -70,7 +70,7 @@ jobs:
           echo "$GITHUB_TOKEN" | docker login --username "$GITHUB_REPOSITORY" --password-stdin https://docker.pkg.github.com
           docker push ${IMAGE}
   deploy-dev:
-    name: Deploy to NAIS dev gcp
+    name: Deploy to NAIS dev fss
     needs: build
     if: github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
