--- a/build.gradle
+++ b/build.gradle
@@ -71,6 +71,7 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.5"
 
     implementation "com.google.code.gson:gson:2.8.6"
+    implementation "org.json:json:20210307"
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 
