--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -82,7 +82,7 @@ jobs:
           CLUSTER: dev-fss
           RESOURCE: .nais/dev.yaml
   deploy-prod:
-    name: Deploy to NAIS prod gcp
+    name: Deploy to NAIS prod fss
     needs: build
     if: github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
