DEV Combine prestophook with prestoppath

--- a/.nais/dev.yaml
+++ b/.nais/dev.yaml
@@ -22,13 +22,10 @@ spec:
     initialDelay: 5
     periodSeconds: 5
     failureThreshold: 30
-#  preStopHook:
-#    http:
-#      path: /internal/stop
-#      port: 8080
   preStopHook:
     exec:
       command: [ "/bin/bash", "/pre-stop.sh" ]
+  preStopHookPath: /internal/stop
   terminationGracePeriodSeconds: 60
   prometheus:
     enabled: true
