--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = '1.3.61'
+    ext.kotlin_version = '1.4.32'
     ext.http4k_version = '3.242.0'  //3.285.2
     ext.embedded_kafka = '2.4.0'
     ext.kotlin_loggin_version = '1.7.8'
@@ -11,13 +11,13 @@ buildscript {
 }
 
 plugins {
-    id 'org.jetbrains.kotlin.jvm' version '1.3.61'
-    id 'org.jetbrains.kotlin.plugin.serialization' version '1.3.61'
+    id 'org.jetbrains.kotlin.jvm' version '1.3.72'
+//    id 'org.jetbrains.kotlin.plugin.serialization' version '1.3.61'
 
     id 'application'
     id 'idea'
 
-    id 'org.jmailen.kotlinter' version '2.2.0'
+    id 'org.jmailen.kotlinter' version '2.4.1'
     id 'com.github.johnrengelman.shadow' version '5.1.0'
 }
 
@@ -68,12 +68,13 @@ dependencies {
     implementation "no.nav.security:token-validation-core:1.3.1"
     implementation platform('org.jetbrains.kotlin:kotlin-bom')
 
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.5"
+    //implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.5"
 
     implementation "com.google.code.gson:gson:2.8.6"
     implementation "org.json:json:20210307"
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.5"
 
     implementation "org.http4k:http4k-core:$http4k_version"
     implementation "org.http4k:http4k-client-apache:$http4k_version"
