--- a/.nais/prod.yaml
+++ b/.nais/prod.yaml
@@ -67,6 +67,8 @@ spec:
   env:
     - name: CONTEXT
       value: 'PROD'
+    - name: TWINCALL # TWINCALL triggers two calls and returns the fastest response
+      value: 'OFF'
     - name: SF_TOKENHOST
       value: 'https://login.salesforce.com/services/oauth2/token'
     - name: AUDIENCE_TOKEN_SERVICE_URL
