--- a/.nais/prod.yaml
+++ b/.nais/prod.yaml
@@ -68,7 +68,7 @@ spec:
     - name: CONTEXT
       value: 'PROD'
     - name: TWINCALL # TWINCALL triggers two calls and returns the fastest response
-      value: 'OFF'
+      value: 'ON'
     - name: SF_TOKENHOST
       value: 'https://login.salesforce.com/services/oauth2/token'
     - name: AUDIENCE_TOKEN_SERVICE_URL
