--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
-    ext.kotlin_version = '1.4.32'
-    ext.http4k_version = '3.251.0'  //3.285.2
+    ext.kotlin_version = '1.6.0'
+    ext.http4k_version = '3.251.0'
     ext.kotlin_loggin_version = '1.7.8'
     ext.logback_version = '1.2.3'
     ext.log4j_version = '1.7.25'
@@ -9,12 +9,12 @@ buildscript {
 }
 
 plugins {
-    id 'org.jetbrains.kotlin.jvm' version '1.3.72'
+    id 'org.jetbrains.kotlin.jvm' version '1.6.0'
 
     id 'application'
     id 'idea'
 
-    id 'org.jmailen.kotlinter' version '2.4.1'
+    id 'org.jmailen.kotlinter' version '3.2.0'
     id 'com.github.johnrengelman.shadow' version '5.1.0'
 }
 
