--- a/build.gradle
+++ b/build.gradle
@@ -80,6 +80,7 @@ dependencies {
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    testImplementation 'io.mockk:mockk:1.12.0'
 }
 
 test {
