--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,12 +4,15 @@ on: [push, pull_request]
 
 env:
   IMAGE: ghcr.io/${{ github.repository }}/sf-henvendelse-api-proxy:${{ github.sha }}
-
+  PERMISSIONS_CONFIG: '{ "create_artifact": true, "enabled": true, "debug": false }'
 jobs:
   test:
     name: Run tests
     runs-on: ubuntu-latest
     steps:
+      - uses: GitHubSecurityLab/actions-permissions/monitor@v1
+        with:
+          config: ${{ env.PERMISSIONS_CONFIG }}
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
         with:
@@ -31,7 +34,6 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: ./gradlew clean build
-
   build:
     name: Build and push Docker container
     needs: test
@@ -39,6 +41,9 @@ jobs:
     runs-on: ubuntu-latest
     permissions: write-all
     steps:
+      - uses: GitHubSecurityLab/actions-permissions/monitor@v1
+        with:
+          config: ${{ env.PERMISSIONS_CONFIG }}
       - uses: actions/checkout@v3
       - uses: docker/login-action@v2
         with:
