--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,9 +12,9 @@ jobs:
     permissions:
       contents: read
     steps:
-      - uses: GitHubSecurityLab/actions-permissions/monitor@v1
-        with:
-          config: ${{ env.PERMISSIONS_CONFIG }}
+#      - uses: GitHubSecurityLab/actions-permissions/monitor@v1
+#        with:
+#          config: ${{ env.PERMISSIONS_CONFIG }}
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
         with:
@@ -42,11 +42,13 @@ jobs:
     if: github.event_name != 'pull_request'
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: 'read'
+      packages: 'write'
+      id-token: 'write'
     steps:
-      - uses: GitHubSecurityLab/actions-permissions/monitor@v1
-        with:
-          config: ${{ env.PERMISSIONS_CONFIG }}
+#      - uses: GitHubSecurityLab/actions-permissions/monitor@v1
+#        with:
+#          config: ${{ env.PERMISSIONS_CONFIG }}
       - uses: actions/checkout@v3
       - uses: docker/login-action@v2
         with:
