--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,7 +44,7 @@ jobs:
     permissions:
       contents: 'read'
       packages: 'write'
-      id-token: 'write'
+#      id-token: 'write'
     steps:
 #      - uses: GitHubSecurityLab/actions-permissions/monitor@v1
 #        with:
