--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,86 +2,51 @@ name: Build, push, and deploy
 
 on: [push, pull_request]
 
-env:
-  IMAGE: ghcr.io/${{ github.repository }}/sf-henvendelse-api-proxy:${{ github.sha }}
-  PERMISSIONS_CONFIG: '{ "create_artifact": true, "enabled": true, "debug": false }'
 jobs:
   test:
     name: Run tests
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
     steps:
-#      - uses: GitHubSecurityLab/actions-permissions/monitor@v1
-#        with:
-#          config: ${{ env.PERMISSIONS_CONFIG }}
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
         with:
           java-version: 11
           distribution: 'zulu'
-      - uses: actions/cache@v3
-        with:
-          path: ~/.gradle/caches
-          key: ${{ runner.os }}-gradle-cache-${{ hashFiles('build.gradle') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-cache-
-      - uses: actions/cache@v3
-        with:
-          path: ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-wrapper-${{ hashFiles('gradle/wrapper/gradle-wrapper.properties') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-wrapper-
       - name: Build and run tests
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: ./gradlew clean build
+        run: ./gradlew test
   build:
     name: Build and push Docker container
     needs: test
     if: github.event_name != 'pull_request'
     runs-on: ubuntu-latest
     permissions:
-      contents: 'read'
-      packages: 'write'
-#      id-token: 'write'
+      id-token: write
+      contents: write
+    outputs:
+      image: ${{ steps.docker-push.outputs.image }}
     steps:
-#      - uses: GitHubSecurityLab/actions-permissions/monitor@v1
-#        with:
-#          config: ${{ env.PERMISSIONS_CONFIG }}
       - uses: actions/checkout@v3
-      - uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
       - uses: actions/setup-java@v3
         with:
           java-version: 11
           distribution: 'zulu'
-      - uses: actions/cache@v3
+      - name: Setup Gradle to generate and submit dependency graphs
+        uses: gradle/gradle-build-action@v2.10.0
         with:
-          path: ~/.gradle/caches
-          key: ${{ runner.os }}-gradle-cache-${{ hashFiles('build.gradle') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-cache-
-      - uses: actions/cache@v3
-        with:
-          path: ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-wrapper-${{ hashFiles('gradle/wrapper/gradle-wrapper.properties') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-wrapper-
+          dependency-graph: generate-and-submit
       - name: Build JAR
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: ./gradlew clean build shadowJar -x test
       - name: Build and publish Docker image
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          docker build . --pull --tag ${IMAGE}
-          echo "$GITHUB_TOKEN" | docker login --username "$GITHUB_REPOSITORY" --password-stdin https://docker.pkg.github.com
-          docker push ${IMAGE}
+        uses: nais/docker-build-push@v0
+        id: docker-push
+        with:
+          team: teamnks
+          identity_provider: ${{ secrets.NAIS_WORKLOAD_IDENTITY_PROVIDER }}
+          project_id: ${{ vars.NAIS_MANAGEMENT_PROJECT_ID }}
   deploy-dev:
     name: Deploy to NAIS dev fss
     needs: build
@@ -94,15 +59,17 @@ jobs:
           APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
           CLUSTER: dev-fss
           RESOURCE: .nais/dev.yaml
-  deploy-prod:
-    name: Deploy to NAIS prod fss
-    needs: build
-    if: github.ref == 'refs/heads/master'
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: nais/deploy/actions/deploy@v1
-        env:
-          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
-          CLUSTER: prod-fss
-          RESOURCE: .nais/prod.yaml
+          VAR: image=${{ needs.build.outputs.image }}
+#  deploy-prod:
+#    name: Deploy to NAIS prod fss
+#    needs: build
+#    if: github.ref == 'refs/heads/master'
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v3
+#      - uses: nais/deploy/actions/deploy@v1
+#        env:
+#          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
+#          CLUSTER: prod-fss
+#          RESOURCE: .nais/prod.yaml
+#          VAR: image=${{ needs.build.outputs.image }}
