--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,9 @@
-buildscript {
-    ext.kotlin_version = '1.6.0'
-    ext.http4k_version = '3.251.0'
-    ext.kotlin_loggin_version = '1.7.8'
-    ext.logback_version = '1.2.3'
-    ext.log4j_version = '1.7.25'
-    ext.logstash_encoder_version = '6.3'
-    ext.prometheus_version = '0.8.0'
-}
-
 plugins {
-    id 'org.jetbrains.kotlin.jvm' version '1.6.0'
-
     id 'application'
-    id 'idea'
 
+    id 'org.jetbrains.kotlin.jvm' version '1.9.0'
     id 'org.jmailen.kotlinter' version '3.2.0'
-    id 'com.github.johnrengelman.shadow' version '5.1.0'
+    id 'com.github.johnrengelman.shadow' version '8.0.0'
 }
 
 group 'no.nav.sf.henvendelse.api.proxy'
@@ -59,28 +47,30 @@ configurations {
 
 dependencies {
     implementation "no.nav.security:token-validation-core:1.3.1"
-    implementation platform('org.jetbrains.kotlin:kotlin-bom')
 
-    implementation "com.google.code.gson:gson:2.8.6"
-    implementation "org.json:json:20210307"
+    implementation "com.google.code.gson:gson:2.10"
+    implementation "org.json:json:20231013"
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.5"
 
-    implementation "org.http4k:http4k-core:$http4k_version"
-    implementation "org.http4k:http4k-client-apache:$http4k_version"
-    implementation "org.http4k:http4k-server-apache:$http4k_version"
+    implementation "org.http4k:http4k-client-apache:3.251.0"
+    implementation "org.http4k:http4k-server-apache:3.251.0"
 
-    implementation "io.github.microutils:kotlin-logging:$kotlin_loggin_version"
-    implementation "ch.qos.logback:logback-classic:$logback_version"
-    implementation "net.logstash.logback:logstash-logback-encoder:$logstash_encoder_version"
+    implementation "io.github.microutils:kotlin-logging:1.7.9"
+    implementation "ch.qos.logback:logback-classic:1.4.14"
+    implementation "net.logstash.logback:logstash-logback-encoder:7.4"
 
-    implementation "io.prometheus:simpleclient_common:$prometheus_version"
-    implementation "io.prometheus:simpleclient_hotspot:$prometheus_version"
+    implementation "io.prometheus:simpleclient_common:0.8.1"
+    implementation "io.prometheus:simpleclient_hotspot:0.8.1"
 
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
-    testImplementation 'io.mockk:mockk:1.12.0'
+    implementation "net.minidev:json-smart:2.4.9" //Desired transient json-smart to token-validation above
+    implementation "org.apache.commons:commons-compress:1.24.0" //transient http4k-apache
+    implementation "org.apache.httpcomponents:httpclient:4.5.13" //Desired transient httpclient to http4k-apache
+    implementation "org.xerial.snappy:snappy-java:1.1.10.4" //Desired transient snappy to kafka-clients above
+
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.1'
+    testImplementation 'io.mockk:mockk:1.13.8'
 }
 
 test {
