--- a/.nais/dev.yaml
+++ b/.nais/dev.yaml
@@ -71,8 +71,14 @@ spec:
         - application: azure-token-generator
           cluster: dev-gcp
           namespace: aura
+        - application: pensjon-pen-q0
+          namespace: pensjon-q0
+        - application: pensjon-pen-q1
+          namespace: pensjon-q1
         - application: pensjon-pen-q2
           namespace: pensjon-q2
+        - application: pensjon-pen-q5
+          namespace: pensjon-q5
         - application: salesforce
           namespace: teamcrm
           cluster: dev-external
