--- a/.nais/prod.yaml
+++ b/.nais/prod.yaml
@@ -64,6 +64,8 @@ spec:
           namespace: personoversikt
         - application: pensjon-pen
           namespace: pensjondeployer
+        - application: bisys
+          namespace: bidrag
         - application: salesforce
           namespace: teamcrm
           cluster: prod-external
