--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -59,17 +59,17 @@ jobs:
           APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
           CLUSTER: dev-fss
           RESOURCE: .nais/dev.yaml
-          VAR: image=${{ needs.build.outputs.image }}
-  deploy-prod:
-    name: Deploy to NAIS prod fss
-    needs: build
-    if: github.ref == 'refs/heads/master'
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: nais/deploy/actions/deploy@v1
-        env:
-          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
-          CLUSTER: prod-fss
-          RESOURCE: .nais/prod.yaml
-          VAR: image=${{ needs.build.outputs.image }}
+          VAR: image=${{ needs.build.outputs.image }},DEPLOY_CLUSTER=dev-fss
+#  deploy-prod:
+#    name: Deploy to NAIS prod fss
+#    needs: build
+#    if: github.ref == 'refs/heads/master'
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v4
+#      - uses: nais/deploy/actions/deploy@v1
+#        env:
+#          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
+#          CLUSTER: prod-fss
+#          RESOURCE: .nais/prod.yaml
+#          VAR: image=${{ needs.build.outputs.image }},DEPLOY_CLUSTER=prod-fss
