--- a/.nais/prod.yaml
+++ b/.nais/prod.yaml
@@ -22,10 +22,10 @@ spec:
     path: /internal/metrics
   resources:
     limits:
-      memory: 4096Mi
+      memory: 4Gi
     requests:
-      cpu: 200m
-      memory: 768Mi
+      cpu: 5m
+      memory: 512Mi
   ingresses:
     - "https://sf-henvendelse-api-proxy.intern.nav.no"
     - "https://sf-henvendelse-api-proxy.prod-fss-pub.nais.io"
