--- a/.nais/prod.yaml
+++ b/.nais/prod.yaml
@@ -55,6 +55,9 @@ spec:
         - application: salesforce
           namespace: teamcrm
           cluster: prod-external
+        - application: modiapersonoversikt-api
+          namespace: personoversikt
+          cluster: prod-gcp
   envFrom:
     - secret: sf-henvendelse-api
   env:
