Gives modia robot api permissions

--- a/.nais/dev.yaml
+++ b/.nais/dev.yaml
@@ -73,6 +73,9 @@ spec:
         - application: modiapersonoversikt-api
           namespace: personoversikt
           cluster: dev-gcp
+        - application: modia-robot-api
+          namespace: personoversikt
+          cluster: dev-gcp
   envFrom:
     - secret: sf-henvendelse-api
   env:
