--- a/.nais/prod.yaml
+++ b/.nais/prod.yaml
@@ -58,6 +58,9 @@ spec:
         - application: modiapersonoversikt-api
           namespace: personoversikt
           cluster: prod-gcp
+        - application: modia-robot-api
+          namespace: personoversikt
+          cluster: prod-gcp
   envFrom:
     - secret: sf-henvendelse-api
   env:
