--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,23 +47,8 @@ jobs:
           team: teamnks
           identity_provider: ${{ secrets.NAIS_WORKLOAD_IDENTITY_PROVIDER }}
           project_id: ${{ vars.NAIS_MANAGEMENT_PROJECT_ID }}
-  deploy-dev:
-    name: Deploy to NAIS dev gcp
-    needs: build
-    if: github.ref == 'refs/heads/master'
-    runs-on: ubuntu-latest
-    permissions:
-      id-token: write
-      contents: read
-    steps:
-      - uses: actions/checkout@v4
-      - uses: nais/deploy/actions/deploy@v2
-        env:
-          CLUSTER: dev-gcp
-          RESOURCE: .nais/dev.yaml
-          VAR: image=${{ needs.build.outputs.image }},DEPLOY_CLUSTER=dev-gcp
-#  deploy-prod:
-#    name: Deploy to NAIS prod fss
+#  deploy-dev:
+#    name: Deploy to NAIS dev gcp
 #    needs: build
 #    if: github.ref == 'refs/heads/master'
 #    runs-on: ubuntu-latest
@@ -74,6 +59,21 @@ jobs:
 #      - uses: actions/checkout@v4
 #      - uses: nais/deploy/actions/deploy@v2
 #        env:
-#          CLUSTER: prod-fss
-#          RESOURCE: .nais/prod.yaml
-#          VAR: image=${{ needs.build.outputs.image }},DEPLOY_CLUSTER=prod-fss
+#          CLUSTER: dev-gcp
+#          RESOURCE: .nais/dev.yaml
+#          VAR: image=${{ needs.build.outputs.image }},DEPLOY_CLUSTER=dev-gcp
+  deploy-prod:
+    name: Deploy to NAIS prod fss
+    needs: build
+    if: github.ref == 'refs/heads/master'
+    runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: read
+    steps:
+      - uses: actions/checkout@v4
+      - uses: nais/deploy/actions/deploy@v2
+        env:
+          CLUSTER: prod-fss
+          RESOURCE: .nais/prod.yaml
+          VAR: image=${{ needs.build.outputs.image }},DEPLOY_CLUSTER=prod-fss
