--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -62,18 +62,18 @@ jobs:
           CLUSTER: dev-fss
           RESOURCE: .nais/dev.yaml
           VAR: image=${{ needs.build.outputs.image }},DEPLOY_CLUSTER=dev-fss
-  deploy-prod:
-    name: Deploy to NAIS prod fss
-    needs: build
-    if: github.ref == 'refs/heads/master'
-    runs-on: ubuntu-latest
-    permissions:
-      id-token: write
-      contents: read
-    steps:
-      - uses: actions/checkout@v4
-      - uses: nais/deploy/actions/deploy@v2
-        env:
-          CLUSTER: prod-fss
-          RESOURCE: .nais/prod.yaml
-          VAR: image=${{ needs.build.outputs.image }},DEPLOY_CLUSTER=prod-fss
+#  deploy-prod:
+#    name: Deploy to NAIS prod fss
+#    needs: build
+#    if: github.ref == 'refs/heads/master'
+#    runs-on: ubuntu-latest
+#    permissions:
+#      id-token: write
+#      contents: read
+#    steps:
+#      - uses: actions/checkout@v4
+#      - uses: nais/deploy/actions/deploy@v2
+#        env:
+#          CLUSTER: prod-fss
+#          RESOURCE: .nais/prod.yaml
+#          VAR: image=${{ needs.build.outputs.image }},DEPLOY_CLUSTER=prod-fss
