--- a/.nais/dev.yaml
+++ b/.nais/dev.yaml
@@ -83,7 +83,7 @@ spec:
     - secret: sf-henvendelse-api
   env:
     - name: TWINCALL # TWINCALL ON triggers two calls and returns the fastest response
-      value: 'ON'
+      value: 'OFF'
     - name: SF_TOKENHOST
       value: 'https://test.salesforce.com/services/oauth2/token'
     - name: AUDIENCE_TOKEN_SERVICE_URL
