--- a/.nais/prod-gcp.yaml
+++ b/.nais/prod-gcp.yaml
@@ -41,6 +41,7 @@ spec:
         - application: sf-henvendelse-db # TODO Use service discovery in gcp
       external:
         - host: sf-henvendelse-db.intern.nav.no
+        - host: login.salesforce.com
         - host: navdialog.my.salesforce.com
 
     inbound:
