--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,6 +35,7 @@ jobs:
       - name: Setup Gradle to generate and submit dependency graphs
         uses: gradle/actions/setup-gradle@v3
         with:
+          dependency-graph-enabled: false
           dependency-graph: generate-and-submit
       - name: Build JAR
         env:
