--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Setup Gradle to generate and submit dependency graphs
         uses: gradle/actions/setup-gradle@v3
         with:
-          dependency-graph-enabled: false
+          cache-disabled: true
           dependency-graph: generate-and-submit
       - name: Build JAR
         env:
