--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -64,7 +64,7 @@ jobs:
   deploy-dev-gcp:
     name: Deploy to NAIS dev gcp
     needs: build
-#    if: github.ref == 'refs/heads/master'
+    if: github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
     permissions:
       id-token: write
@@ -79,7 +79,7 @@ jobs:
   deploy-prod-fss:
     name: Deploy to NAIS prod fss
     needs: build
-#    if: github.ref == 'refs/heads/master'
+    if: github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
     permissions:
       id-token: write
@@ -94,7 +94,7 @@ jobs:
   deploy-prod-gcp:
     name: Deploy to NAIS prod gcp
     needs: build
-#    if: github.ref == 'refs/heads/master'
+    if: github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
     permissions:
       id-token: write
