--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,23 +46,8 @@ jobs:
         id: docker-push
         with:
           team: teamnks
-#  deploy-dev-fss:
-#    name: Deploy to NAIS dev fss
-#    needs: build
-#    if: github.ref == 'refs/heads/master'
-#    runs-on: ubuntu-latest
-#    permissions:
-#      id-token: write
-#      contents: read
-#    steps:
-#      - uses: actions/checkout@v4
-#      - uses: nais/deploy/actions/deploy@v2
-#        env:
-#          CLUSTER: dev-fss
-#          RESOURCE: .nais/dev-fss.yaml
-#          VAR: image=${{ needs.build.outputs.image }},DEPLOY_CLUSTER=dev-fss
-  deploy-dev-gcp:
-    name: Deploy to NAIS dev gcp
+  deploy-dev-fss:
+    name: Deploy to NAIS dev fss
     needs: build
 #    if: github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
@@ -73,9 +58,24 @@ jobs:
       - uses: actions/checkout@v4
       - uses: nais/deploy/actions/deploy@v2
         env:
-          CLUSTER: dev-gcp
-          RESOURCE: .nais/dev-gcp.yaml
-          VAR: image=${{ needs.build.outputs.image }},DEPLOY_CLUSTER=dev-gcp
+          CLUSTER: dev-fss
+          RESOURCE: .nais/dev-fss.yaml
+          VAR: image=${{ needs.build.outputs.image }},DEPLOY_CLUSTER=dev-fss
+#  deploy-dev-gcp:
+#    name: Deploy to NAIS dev gcp
+#    needs: build
+##    if: github.ref == 'refs/heads/master'
+#    runs-on: ubuntu-latest
+#    permissions:
+#      id-token: write
+#      contents: read
+#    steps:
+#      - uses: actions/checkout@v4
+#      - uses: nais/deploy/actions/deploy@v2
+#        env:
+#          CLUSTER: dev-gcp
+#          RESOURCE: .nais/dev-gcp.yaml
+#          VAR: image=${{ needs.build.outputs.image }},DEPLOY_CLUSTER=dev-gcp
 #  deploy-prod-fss:
 #    name: Deploy to NAIS prod fss
 #    needs: build
