removed extra char from yml file

--- a/.nais/dev-gcp.yaml
+++ b/.nais/dev-gcp.yaml
@@ -109,5 +109,5 @@ spec:
     - name: SALESFORCE_AZURE_ALIAS
       value: dev-external.teamcrm.salesforce
     - name: DEPLOY_CLUSTER
-      value: '{{ DEPLOY_CLUSTER }}'f
+      value: '{{ DEPLOY_CLUSTER }}'
 
