Add transient dep override for nimbus-jose-jwt

--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ configurations {
 
 dependencies {
     implementation "no.nav.security:token-validation-core:4.1.8" //Major version 5 issue using webproxy
+    implementation "com.nimbusds:nimbus-jose-jwt:10.0.2" //Transient dependency to token-validation
     implementation "net.minidev:json-smart:2.5.2" //Transient dependency to token-validation
 
     implementation("org.json:json:20240303")
