--- a/.nais/prod-gcp.yaml
+++ b/.nais/prod-gcp.yaml
@@ -38,12 +38,13 @@ spec:
   accessPolicy:
     outbound:
       rules:
+        - application: logging
+          namespace: nais-system
         - application: sf-henvendelse-db # TODO Use service discovery in gcp
       external:
         - host: sf-henvendelse-db.intern.nav.no
         - host: login.salesforce.com
         - host: navdialog.my.salesforce.com
-
     inbound:
       rules:
         - application: itestapp
