--- a/.nais/dev-gcp.yaml
+++ b/.nais/dev-gcp.yaml
@@ -39,6 +39,8 @@ spec:
   accessPolicy:
     outbound:
       rules:
+        - application: logging
+          namespace: nais-system
         - application: sf-henvendelse-db # TODO Use service discovery in gcp
       external:
         - host: test.salesforce.com
