Service discovery for sf-henvendelse-db - dev

--- a/.nais/dev-gcp.yaml
+++ b/.nais/dev-gcp.yaml
@@ -41,13 +41,12 @@ spec:
       rules:
         - application: logging
           namespace: nais-system
-        - application: sf-henvendelse-db # TODO Use service discovery in gcp
+        - application: sf-henvendelse-db
       external:
         - host: test.salesforce.com
         - host: navdialog--preprod.my.salesforce.com
         - host: navdialog--uat.my.salesforce.com
         - host: navdialog--sit2.my.salesforce.com
-        - host: sf-henvendelse-db.intern.dev.nav.no
     inbound:
       rules:
         - application: simtest
